# MPC-based-Footstep-Planning

gait_planner/config/: surenav_config.json  walk_config.json
gait_planner/include/: DCM.h  GaitManager.h  Robot.h
gait_planner/src/: DCM.cpp  GaitManager.cpp  Robot.cpp
hand_planner/: CMakeLists.txt
hand_planner/config/: finger_scenarios.json  object_classes.json
hand_planner/include/: FingerControl.h  HandManager.h  S5_hand.h
hand_planner/src/: FingerControl.cpp  HandManager.cpp  S5_hand.cpp
hand_planner/srv/: FingerControl.srv  FingerScenario.srv  MoveHandsGeneral.srv
robot_manager/: CMakeLists.txt
robot_manager/config/: scenarios.yaml
robot_manager/include/: RobotManager.h
robot_manager/src/: RobotManager.cpp
robot_manager/srv/: JointCommand.srv
robot_teleop/src/: qnode.cpp
simulation/surenaV_gazebo/: CMakeLists.txt
simulation/surenaV_gazebo/launch/: mpc_world_footstep.launch  mpc_world_static.launch  rtabmap.launch  surenaV_gazebo.launch  turtle_map.launch
simulation/surenaV_gazebo/map/: map_6.yaml  map_6_fixed.pgm
simulation/surenaV_gazebo/models/human_actor/: model.sdf
simulation/surenaV_gazebo/rviz/: social_mpc.rviz
simulation/surenaV_gazebo/src/: HumanControllerPlugin.cpp
simulation/surenaV_gazebo/worlds/: factory.world  surenaV.world
social_mpc_planner/: CMakeLists.txt  package.xml
social_mpc_planner/launch/: mpc_world.launch  mpc_world_footstep.launch
social_mpc_planner/msg/: CircularObstacleArray.msg  HumanArray.msg  HumanValidation.msg  PredictedPeople.msg  PredictedPerson.msg  SocialSTGCNNPersonPrediction.msg  (+1 more)
(+20 files in other folders)
